--- a/admins/templates/admin.html
+++ b/admins/templates/admin.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>Home Caretaker Admin Dashboard</title>
     <style>
@@ -404,12 +405,14 @@
                     <span>Booking Management</span>
                 </div>
                 <div class="menu-item">
+                    <a class="menu_a" href="{% url 'add_services' %}">
                     <i class="fas fa-hand-holding-heart"></i>
-                    <span>Services</span>
+                    <span>Services</span></a>
                 </div>
                 <div class="menu-item">
+                    <a class="menu_a" href="{% url 'all_users' %}">
                     <i class="fas fa-users"></i>
-                    <span>User Management</span>
+                    <span>User Management</span></a>
                 </div>
                 <div class="menu-item">
                     <i class="fas fa-comment-alt"></i>
