--- a/provider/templates/provider.html
+++ b/provider/templates/provider.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <title>Home Caretaker Service Provider Dashboard</title>
     <style>
         :root {
@@ -515,12 +517,14 @@
             </div>
             <div class="menu">
                 <div class="menu-item active">
+                    <a class="menu_a" href="{% url 'provider' %}">
                     <i class="fas fa-home"></i>
-                    <span>Dashboard</span>
+                    <span>Dashboard</span></a>
                 </div>
                 <div class="menu-item">
+                    <a class="menu_a" href="{% url 'provider_service' %}">
                     <i class="fas fa-hand-holding-heart"></i>
-                    <span>Services</span>
+                    <span>Services</span></a>
                 </div>
                 <div class="menu-item">
                     <i class="fas fa-calendar-check"></i>
@@ -554,6 +558,7 @@
         
         <!-- Main Content -->
         <div class="main-content">
+            {% block content %}
             <div class="header">
             </div>
             
@@ -818,6 +823,7 @@
                     </div>
                 </div>
             </div>
+            {% endblock %}
         </div>
     </div>
 </body>
