--- a/admins/templates/login.html
+++ b/admins/templates/login.html
@@ -41,9 +41,12 @@
             border: none;
             font-weight: bold;
             transition: background 0.3s;
+            
         }
         .btn-login:hover {
             background: #3b41b3;
+            color: white;
+            border: 1px solid black;
         }
         .error-message {
             color: red;
