--- a/admins/templates/registration.html
+++ b/admins/templates/registration.html
@@ -45,6 +45,7 @@
         }
         .btn-register:hover {
             background: #3b41b3;
+            color: white;
         }
         .input-group-text {
             cursor: pointer;
