--- a/provider/templates/provider.html
+++ b/provider/templates/provider.html
@@ -375,7 +375,7 @@
         <div class="sidebar">
             <div class="logo">
                 <i class="fas fa-heart-pulse fa-2x"></i>
-                <h2>Home Caretaker</h2>
+                <h2>CareConnect</h2>
             </div>
             <div class="menu">
                 <div class="menu-item active">
