--- a/user/templates/user.html
+++ b/user/templates/user.html
@@ -425,8 +425,9 @@
                     <span>My Bookings</span></a>
                 </div>
                 <div class="menu-item">
+                    <a class="menu_a" href="{% url 'complaint' %}">
                     <i class="fas fa-comment-alt"></i>
-                    <span>Complaints</span>
+                    <span>Complaints</span></a>
                 </div>
                 <div class="menu-item">
                     <a class="menu_a" href="{% url 'profile' request.user.id %}">
