--- a/admins/templates/all_provider.html
+++ b/admins/templates/all_provider.html
@@ -33,7 +33,7 @@
                 <div>
                     <h3 style="font-size: 1.2rem; margin-bottom: 0.5rem;">{{ provider.username }}</h3>
                     <p style="color: var(--gray); font-size: 0.9rem; margin-bottom: 0.25rem;">
-                        <i class="fas fa-envelope" style="width: 20px;"></i> {{ provider.email|default:"No Email" }}
+                        <i class="fas fa-envelope" style="width: 20px;"></i> {{ provider.userprofile_model.email|default:"No Email" }}
                     </p>
                     <p style="color: var(--gray); font-size: 0.9rem; margin-bottom: 0.25rem;">
                         <i class="fas fa-phone" style="width: 20px;"></i> {{ provider.userprofile_model.phone_number|default:"No Phone" }}
