--- a/admins/templates/index.html
+++ b/admins/templates/index.html
@@ -234,7 +234,7 @@
                         <a class="nav-link" href="#services">Services</a>
                     </li>
                     <li class="nav-item ms-lg-3">
-                        <a class="btn btn-primary rounded-pill px-4" href="{% url 'register' %}">Register</a>
+                        <a class="btn btn-primary rounded-pill px-4" href="{% url 'login' %}">Login</a>
                     </li>
                 </ul>
             </div>
